# Schoar-E600

./: README.md
scholar_bringup/: CMakeLists.txt  package.xml
scholar_bringup/include/: scholar.h
scholar_bringup/launch/: bringup.launch
scholar_bringup/src/: scholar.cpp  scholar_bringup.cpp
scholar_bringup/udev/: scholar_600.rules
scholar_calibrate/: CMakeLists.txt  package.xml  setup.py
scholar_calibrate/cfg/: CalibrateAngular.cfg  CalibrateLinear.cfg
scholar_calibrate/scripts/: angular_calibrate.py  calibrate_linear.py
scholar_control/: CMakeLists.txt  package.xml
scholar_control/config/: control.yaml
scholar_control/launch/: scholar_control.launch
scholar_description/: CMakeLists.txt  package.xml
scholar_description/launch/: display.launch  gazebo.launch
scholar_description/meshes/: base_link.STL  left_front_wheel_link.STL  left_rear_wheel_link.STL  right_front_wheel_link.STL  right_rear_wheel_link.STL  top_plate_link.STL
scholar_description/urdf/: scholar_description.xacro
scholar_e600_base/: README.md
scholar_e600_base/scholar_base_bringup/: CMakeLists.txt  package.xml
scholar_e600_base/scholar_base_bringup/launch/: bringup.launch
scholar_e600_base/scholar_base_bringup/src/: scholar.cpp  scholar_bringup.cpp
scholar_e600_base/scholar_base_bringup/udev/: scholar_600.rules
scholar_e600_base/scholar_base_calibrate/: CMakeLists.txt  package.xml  setup.py
scholar_e600_base/scholar_base_calibrate/cfg/: CalibrateAngular.cfg  CalibrateLinear.cfg
scholar_e600_base/scholar_base_control/: CMakeLists.txt  package.xml
scholar_e600_base/scholar_base_control/config/: control.yaml  localization.yaml  twist.yaml
scholar_e600_base/scholar_base_control/launch/: scholar_base_control.launch
scholar_e600_base/scholar_base_description/: CMakeLists.txt  package.xml
scholar_e600_base/scholar_base_description/config/: joint_names_scholar_e600_base_description.yaml
scholar_e600_base/scholar_base_description/launch/: display.launch
scholar_e600_base/scholar_base_description/meshes/: base_link.STL
scholar_e600_base/scholar_base_description/urdf/: scholar_base_description.xacro
scholar_e600_base/scholar_base_gazebo/: CMakeLists.txt  package.xml
scholar_e600_base/scholar_base_gazebo/launch/: scholar_base_gazebo.launch
scholar_e600_base/scholar_base_gazebo/world/scholar_house/: model.config  model.sdf
scholar_e600_base/scholar_imu_bringup/: CMakeLists.txt  package.xml
scholar_e600_base/scholar_imu_bringup/include/: imu.h
scholar_e600_base/scholar_imu_bringup/launch/: bringup.launch
scholar_e600_base/scholar_imu_bringup/udev/: imu.rules
scholar_e600_base/scholar_joy_teleop/: package.xml
scholar_gazebo/: CMakeLists.txt  package.xml
scholar_gazebo/launch/: scholar_gazebo.launch
scholar_gazebo/world/: break_room.world
scholar_imu/: CMakeLists.txt  package.xml
scholar_imu/launch/: bringup.launch
scholar_imu/src/: imu.cpp  imu_driver.cpp
scholar_imu/udev/: imu.rules
scholar_joy_teleop/: CMakeLists.txt
scholar_joy_teleop/launch/: scholar_teleop.launch
scholar_joy_teleop/src/: scholar_joy_teleop.py
scholar_navigation/: CMakeLists.txt  package.xml
scholar_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params_map.yaml  global_planner_params.yaml  local_costmap_params.yaml  localization.yaml  planner.yaml
scholar_navigation/launch/: amcl.launch  bringup.launch  gmapping.launch  gmapping_demo.launch  move_base.launch  move_base_demo.launch
scholar_navigation/scholar_slam_description/: CMakeLists.txt  package.xml
scholar_navigation/scholar_slam_description/config/: joint_names_slam_top_plate_description.yaml
scholar_navigation/scholar_slam_description/launch/: display.launch
scholar_navigation/scholar_slam_description/urdf/: _d435.urdf.xacro  slam_description.xacro  top_plate.xacro
scholar_navigation/scholar_slam_gazebo/: CMakeLists.txt  package.xml
scholar_navigation/scholar_slam_gazebo/launch/: scholar_base_gazebo.launch
scholar_navigation/scholar_slam_gazebo/world/: scholar.world
scholar_rviz/: CMakeLists.txt  package.xml
scholar_rviz/launch/: view_robot.launch  view_slam.launch
scholar_rviz/rviz/: model.rviz  robot.rviz
