<?xml version="1.0"?>
<package format="2">
  <name>scholar_calibrate</name>
  <version>0.0.0</version>
  <description>The scholar_calibrate package</description>

  <maintainer email="mini@todo.todo">mini</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <!--build_depend>geometry_msgs</build_depend-->
  <!--build_depend>move_base_msgs</build_depend-->
  <!--build_depend>nav_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend-->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <!--build_depend>visualization_msgs</build_depend-->
  <build_depend>sensor_msgs</build_depend>
  <!--build_export_depend>actionlib</build_export_depend-->
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <!--build_export_depend>geometry_msgs</build_export_depend-->
  <!--build_export_depend>move_base_msgs</build_export_depend-->
  <!--build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>orocos_kdl</build_export_depend-->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <!--build_export_depend>visualization_msgs</build_export_depend-->
  <build_export_depend>sensor_msgs</build_export_depend>
  <!--exec_depend>actionlib</exec_depend-->
  <exec_depend>dynamic_reconfigure</exec_depend>
  <!--exec_depend>geometry_msgs</exec_depend-->
  <!--exec_depend>move_base_msgs</exec_depend-->
  <!--exec_depend>nav_msgs</exec_depend>
  <exec_depend>orocos_kdl</exec_depend-->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <!--exec_depend>visualization_msgs</exec_depend-->
  <exec_depend>sensor_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
